src-tauri/check_output.txt
    Checking tauri-vue-app v1.0.2 (E:\source\node\tauri-vue-app\src-tauri)
warning: unused import: `IpAddr`
 --> src\services\mobile_server.rs:9:16
  |
9 | use std::net::{IpAddr, SocketAddr};
  |                ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Arc`
  --> src\services\mobile_server.rs:10:17
   |
10 | use std::sync::{Arc, Mutex};
   |                 ^^^

error[E0599]: no function or associated item named `get` found for struct `AppDir` in the current scope
   --> src\services\mobile_server.rs:142:49
    |
142 |     let app_data_dir = crate::commands::AppDir::get(&app_handle); 
    |                                                 ^^^ function or associated item not found in `AppDir`
    |
   ::: src\commands\mod.rs:16:1
    |
 16 | pub struct AppDir(pub PathBuf);
    | ----------------- function or associated item `get` not found for this struct
    |
    = help: items from traits can only be used if the trait is implemented and in scope
    = note: the following traits define an item `get`, perhaps you need to implement one of them:
            candidate #1: `Assets`
            candidate #2: `FallibleStreamingIterator`
            candidate #3: `SliceIndex`
            candidate #4: `icu_collections::codepointtrie::cptrie::TypedCodePointTrie`
            candidate #5: `icu_properties::names::PropertyEnumToValueNameLookup`
            candidate #6: `icu_provider::baked::DataStore`
            candidate #7: `log::kv::Source`
            candidate #8: `toml_parser::source::SourceIndex`

For more information about this error, try `rustc --explain E0599`.
warning: `tauri-vue-app` (lib) generated 2 warnings
error: could not compile `tauri-vue-app` (lib) due to 1 previous error; 2 warnings emitted
